🍓🎁 Checkpoint ./views/liveRoom.ejs:37906304/310 ./public/js/liveRoom.js:37906304/2211

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -60,6 +60,10 @@
   <script>
     const roomId = "<%= room.id %>";
     const username = "<%= user.username %>";
+    const user = {
+      username: "<%= user.username %>",
+      isPro: <%= user.isPro ? "true" : "false" %>
+    };
   </script>
   <script src="/js/liveRoom.js"></script>
 </body>
