⏲💄 Checkpoint ./views/streamer.ejs:37906304/616 ./public/js/streamer.js:37906304/13645 ./public/css/streamer.css:37906304/3478

--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -42,6 +42,7 @@
       <div class="panel-content">
         <button id="endStreamBtn"><i class="fas fa-power-off"></i> Kết thúc live</button>
         <button id="shareScreenBtn"><i class="fas fa-desktop"></i> Chia sẻ màn hình</button>
+        <button id="toggleMicBtn"><i class="fas fa-microphone"></i> Mic On</button>
       </div>
     </div>
     <!-- Chat Box -->
