💡🗃 Checkpoint ./views/liveRoom.ejs:37906304/109 ./public/css/liveRoom.css:37906304/328 ./public/js/liveRoom.js:37906304/886 ./public/js/streamer.js:37906304/40 ./server.js:37906304/24428

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -48,6 +48,9 @@
       </div>
     </div>
   </div>
+  <div id="waitingOverlay" class="waiting-overlay">
+    <h2>Chờ streamer vào live...</h2>
+  </div>
   <div id="roomEndedOverlay">
     <h2>🔴 Buổi phát trực tiếp đã kết thúc</h2>
     <button onclick="window.location.href='https://hoctap-9a3.glitch.me/live'">
