--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -2,8 +2,9 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Streamer Room - <%= room.title %></title>
+  <title>Quản lí live - <%= room.title %></title>
   <link rel="stylesheet" href="/css/streamer.css">
+  <link rel="icon" type="image/png" href="https://cdn.glitch.global/71030012-56ea-4d26-a426-e0099201df1c/823029_library_512x512.png?v=1741523759119">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <!-- Load Marked để xử lý Markdown -->
