🍰📻 Checkpoint ./server.js:37906304/3423 ./public/js/streamer.js:37906304/25600 ./views/streamer.ejs:37906304/80

--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -43,6 +43,7 @@
       <div class="panel-content">
         <button id="endStreamBtn"><i class="fas fa-power-off"></i> Kết thúc live</button>
         <button id="shareScreenBtn"><i class="fas fa-desktop"></i> Chia sẻ màn hình</button>
+        <button id="liveCamBtn"><i class="fas fa-camera"></i> Live Cam</button>
         <button id="toggleMicBtn"><i class="fas fa-microphone"></i> Mic On</button>
       </div>
     </div>
