🐙📊 Checkpoint ./public/js/streamer.js:37906304/9 ./views/liveRoom.ejs:37906304/6 ./public/css/liveRoom.css:37906304/12 ./public/js/liveRoom.js:37906304/3039

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -25,7 +25,7 @@
     <!-- Video Area -->
     <div class="video-area">
       <div class="video-wrapper">
-        <video id="liveVideo" class="video-element" autoplay playsinline controls muted></video>
+        <video id="liveVideo" class="video-element" autoplay playsinline controls></video>
         <div id="placeholder" class="video-placeholder">
           Chủ phòng hiện chưa chia sẻ màn hình
         </div>
