📈👩‍❤️‍💋‍👩 Checkpoint ./public/js/streamer.js:37906304/4386 ./views/liveRoom.ejs:37906304/182 ./public/js/liveRoom.js:37906304/2586 ./server.js:37906304/1554 ./public/css/liveRoom.css:37906304/821 ./public/css/streamer.css:37906304/821 ./views/streamer.ejs:37906304/184

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -36,6 +36,7 @@
       <div class="chat-header">
         <span>Phòng Chat</span>
       </div>
+      <div id="pinnedComment" class="pinned-comment"></div>
       <div id="chatContent">
         <ul class="chat-messages" id="chatMessages"></ul>
         <!-- Enhanced Chat Input -->
