--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -48,6 +48,7 @@
       </div>
     </div>
     <!-- Chat Box -->
+    <div id="pinnedComment" class="pinned-comment"></div>
     <div id="chatBox">
       <h3>💬 Chat trực tiếp với người xem</h3>
       <ul id="chatMessages"></ul>
