🌺🙍 Checkpoint ./views/liveRoom.ejs:37906304/43 ./public/css/liveRoom.css:37906304/46

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -62,6 +62,7 @@
   <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
   <!-- Các biến từ EJS -->
   <script>
+    const roomOwner = "<%= room.owner %>";
     const roomId = "<%= room.id %>";
     const username = "<%= user.username %>";
     const user = {
