--- a/public/css/liveRoom.css
+++ b/public/css/liveRoom.css
@@ -80,7 +80,7 @@ header p {
   width: 100%;
   max-width: 1200px;
   position: relative;
-  aspect-ratio: 16 / 9;
+  /*aspect-ratio: 16 / 9;*/
   border: 4px solid #00ffea;
   border-radius: 12px;
   overflow: hidden;
