--- a/public/css/liveRoom.css
+++ b/public/css/liveRoom.css
@@ -78,9 +78,10 @@ header p {
 
 .video-wrapper {
   width: 100%;
-  max-width: 1200px;
+  max-width: 100%;
+  max-height: 100%;
   position: relative;
-  /*aspect-ratio: 16 / 9;*/
+  aspect-ratio: 16 / 9;
   border: 4px solid #00ffea;
   border-radius: 12px;
   overflow: hidden;
@@ -103,6 +104,11 @@ header p {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+/* Ẩn nút Play/Pause chính ở Chrome/Edge */
+video::-webkit-media-controls-play-button,
+video::-webkit-media-controls-start-playback-button {
+  display: none !important;
 }
 
 /* Hiệu ứng pulse phức tạp cho video-placeholder */
