--- a/public/css/streamer.css
+++ b/public/css/streamer.css
@@ -217,7 +217,7 @@ body {
 
 /* Dành cho hệ thống */
 #chatMessages li.message-system {
-  background: rgba(255, 0, 0, 0.15);
+  background: rgba(190,190,190, 0.15);
   border-left: 4px solid #ff0000;
   font-style: italic;
 }
