--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title><%= room.title %> - Phòng live</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://gc.kis.v2.scr.kaspersky-labs.com wss://gc.kis.v2.scr.kaspersky-labs.com;">
   <link rel="stylesheet" href="/css/liveRoom.css">
   <link rel="icon" type="image/png" href="https://cdn.glitch.global/71030012-56ea-4d26-a426-e0099201df1c/823029_library_512x512.png?v=1741523759119">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
